	* Changed supybot.log.timestampFormat to specially handle the
	empty string -- if it's set to the empty string, it will log
	times in seconds-since-epoch format.
	
	* Added supybot.plugins.Weather.convert, which determines whether
	or not Weather.{weather,cnn,ham} will convert temperature to the
	configured temperatureUnit.

	* Changed User.setpassword not to require the <old password> to
	be correct if the requesting user has the owner capability (and
	isn't the owner himself).
	
2004-04-09  Jeremy Fincher  <jemfinch@supybot.org>
	
	* Added supybot.reply.errorWithNotice to make the bot give its
	error messages in a notice.
	
	* Added Filter.colorstrip, an outfilter that strips all color
	codes from messages.

	* Added supybot.plugins.BadWords.{replaceMethod, nastyChars,
	simpleReplacement, requireWordBoundaries}; see the associated
	help strings to find out what they do.
	
	* Added supybot.plugins.Babelfish.disabledLanguages, to disable
	certain languages from being translated/spoken.

	* Added supybot.reply.maximumMores, to give users the ability to
	set the maximum number of "more" chunks replies will generate.
	
	* Added supybot.reply.truncate, to turn off the normal chunking
	of replies that later can be retrieved with the more command.
	Setting this variable to On means that no chunks will ever be
	created.
	
	* Added supybot.plugins.Enforcer.takeRevengeOnOps, which makes
	the bot even take revenge on #channel,ops who try to violate the
	channel configuration.  Of course, such people can change the
	channel configuration to their bidding, but it's a decent
	protection against errant botscripts or something.
	
	* Added supybot.plugins.Channels.alwaysRejoin, to make the bot
	always rejoin when it's kicked.
	
	* Added supybot.databases.users.hash, allowing those running bots
	to specify the default hashed/unhashed state of user passwords in
	the config file.
	
	* Added Debian.bug, which retrieve bug info from Debian's BTS.
